--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ section {
 
 body {
     line-height: 1;
-	font-family: 'montserrat', 'sans-serif';
+	font-family: 'Montserrat', 'sans-serif';
 }
 
 ol,
@@ -191,26 +191,59 @@ ol li {
 /*HELPER CLASS END*/
 
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     outline: 0;
 }
 
-/* NAVAGATION BAR START */
+.wrapper {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+/* NAVAGATION BAR + HEADER START */
 
 header {
-	background: red;
+	background: transparent;
+  width: 100%;
+  position: relative;
+}
+
+header.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.85);
+  -webkit-transform: translateY(-200%);
+          transform: translateY(-200%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  z-index: 5;
+}
+
+body.scroll header.sticky{
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .nav-wrapper {
 	max-width: 1200px;
-	background: black;
 	margin: 0 auto;
 	position: relative;
 	padding: 7px 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
+
 nav.nav-wrapper ul li {
 	display: inline-block;
 	padding: 0 10px;
@@ -219,15 +252,610 @@ nav.nav-wrapper ul li {
 
 nav.nav-wrapper ul li a {
 	font-size: 17px;
-	line-height: 22px; 
+	line-height: 22px;
 	text-decoration: none;
 	color: white;
 	cursor: pointer;
 	border-bottom: 1px solid transparent;
+  padding-bottom: 3px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
+
 nav.nav-wrapper ul li a:hover{
 	border-bottom: 1px solid #ffffff;
 }
 
+ header .logo img{
+   max-width: 400px;
+ }
 
-	
+
+/* PARALLAX STYLES START */
+.cover-main{
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url('../images/LakeMirrorCityView.jpg') right bottom;
+  background: linear-gradient(rgba(255, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/LakeMirrorCityView.jpg') right bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
+
+.cover-contact{
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url('../images/light.jpg') right bottom;
+  background: linear-gradient(rgba(255, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/light.jpg') right bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+ul#scene li.name {
+  text-align: center;
+  font-size: 40px;
+  line-height: 45px;
+  text-transform: uppercase;
+  color: white;
+  width: 100%;
+  margin-top: -100px;
+}
+
+ul#scene li.title {
+  text-align: center;
+  font-size: 30px;
+  line-height: 35px;
+  color: white;
+  width: 100%;
+  margin-top: 60px;
+}
+
+ul#scene {
+  margin-top: 100px;
+}
+
+.btn {
+  width: 100%;
+  text-align: center;
+  margin-top: 150px;
+}
+
+.portfolio-btn,
+.contact-btn {
+  margin: 0 auto;
+  display: inline-block;
+  padding: 10px 20px;
+  border: 1px solid white;
+  background: transparent;
+  color: white;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s
+}
+
+.portfolio-btn:hover,
+.contact-btn:hover {
+  background: white;
+  color: black;
+}
+
+.portfolio-btn {
+  margin-right: 30px;
+}
+
+.contact-btn {
+  margin-left: 30px;
+}
+
+.contact-container{
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  height: 80%;
+  border: 0 solid black;
+  right: 150px;
+}
+
+h2.sub{
+  position: relative;
+  display: block;
+  margin: 30px auto;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  color: white;
+  opacity: 1
+}
+
+h2.sub::after {
+  display: block;
+  height: 2px;
+  background: white;
+  content: "";
+  width: 100px;
+  margin: 5px auto 0 auto;
+}
+
+.info {
+  display: block;
+  color: white;
+  margin-left: 55px;
+
+}
+
+form {
+  display: block;
+  color: white;
+  margin-left: 40px;
+
+}
+
+
+
+/* PARALLAX STYLE END */
+
+/* MASONRY JS STYLES START */
+
+.masonry-grid {
+  position: relative;
+}
+
+.grid {
+  margin: 0 auto;
+}
+
+.grid-item {
+  width: 450px;
+  margin-bottom: 10px;
+}
+
+.tall-img {
+  height: 680px;
+}
+
+img {
+  max-width: 100%;
+}
+
+h2.sub-title{
+  position: relative;
+  display: block;
+  margin: 70px auto;
+  text-align: center;
+  font-size: 35px;
+  line-height: 40px
+}
+
+h2.sub-title::after {
+  display: block;
+  height: 2px;
+  background: black;
+  content: "";
+  width: 100px;
+  margin: 30px auto 0 auto;
+}
+
+
+/*MASONRY JS STYLES END */
+
+/* SVG ANIMATION START */
+
+section.beating-heart {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url('../images/hero-bg.jpg') no-repeat right bottom / cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/hero-bg.jpg') no-repeat right bottom / cover;
+  text-align: center;
+  height: 100vh;
+  padding: 50px 10px;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+section.beating-heart span {
+  font-size: 100px;
+  line-height: 105px;
+}
+
+section.beating-heart h2 {
+  margin-bottom: 30px;
+}
+
+section.beating-heart h2::after{
+  background: white;
+}
+
+.heart {
+  position: relative;
+  width: 100px;
+  margin: 0 30px;
+  fill: red;
+  -webkit-animation: pulse 1s infinite;
+          animation: pulse 1s infinite;
+}
+
+@-webkit-keyframes pulse {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    15%{
+      -webkit-transform: scale(1.25);
+              transform: scale(1.25)
+    }
+    25%{
+      -webkit-transform: scale(1.15);
+              transform: scale(1.15);
+    }
+    35%{
+      -webkit-transform: scale(1.25);
+              transform: scale(1.25);
+    }
+    100%{
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+}
+
+@keyframes pulse {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    15%{
+      -webkit-transform: scale(1.25);
+              transform: scale(1.25)
+    }
+    25%{
+      -webkit-transform: scale(1.15);
+              transform: scale(1.15);
+    }
+    35%{
+      -webkit-transform: scale(1.25);
+              transform: scale(1.25);
+    }
+    100%{
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+}
+
+/* ANIMATION END */
+
+/* SLIDER START */
+.slider-div h2{
+  margin-bottom: 0;
+}
+
+.slider {
+  margin: 20px auto;
+  text-align: center;
+  padding: 20px;
+  color: white;
+}
+
+.slide{
+  max-height: 300px;
+  padding: 15px;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.slick-prev,
+.slick-next {
+  background: black;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+}
+
+.slick-prev{
+  left: 0;
+}
+
+.slick-next{
+  right: 0;
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+  background: black;
+}
+
+.link-container {
+    position: relative;
+    width: 100%;
+    background: rgba(0, 0 , 0, 0.5)
+}
+
+.image {
+
+  display: block;
+  width: 100%;
+  height: auto;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.middle {
+  width: 100%;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+
+}
+
+.link-container:hover .image {
+  opacity: 0.3;
+}
+
+.link-container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: black;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+/* SLIDER END */
+
+
+footer {
+  z-index: -2;
+  position: relative;
+  height: 100px;
+  text-align: center;
+  color: white;
+  background: black;
+}
+
+footer h1 {
+  position: fixed;
+  font-size: 16px;
+  line-height: 25px;
+  color: white;
+  text-align: left;
+  bottom: 40px;
+  left: 75%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  width: 800px;
+  z-index: 1;
+}
+/* SLIDER */
+
+
+/* SOCIAL MEDIA START
+ .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: right;
+    text-decoration: none;
+
+
+    position: fixed;
+    line-height: 25px;
+    bottom: 50px;
+    right: 40%;
+    z-index: 1;
+}
+
+Add a hover effect if you want
+.fa:hover {
+    opacity: 0.7;
+}
+
+
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+*/
+
+  /*RESPONSIVE MENU START */
+@media only screen and (max-width: 1160px) {
+
+  section.beating-heart span{
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .heart{
+    width: 50px;
+    margin: 0 20px;
+  }
+
+}
+
+@media only screen and (max-width: 1024px){
+  .info{
+    font-size: 12px;
+
+  }
+
+}
+
+
+@media only screen and (max-width: 767px) {
+
+  .menu-trigger {
+    background: url('../images/hamburger-icon.svg') no-repeat center / cover;
+    width: 35px;
+    height: 35px;
+    display: block;
+    z-index: 10;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+  }
+
+  .main-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.72);
+    z-index: 20;
+    display: none;
+  }
+
+  .main-overlay:after {
+    background: url('../images/close-icon.svg') no-repeat center / cover;
+    width: 35px;
+    height: 35px;
+    display: block;
+    content: "";
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    z-index: 20;
+  }
+
+  .menu {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background: #131313;
+    width: 100%;
+    max-width: 300px;
+    z-index: 30;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  nav.nav-wrapper ul li{
+    display: block;
+    margin-top: 20px;
+    padding: 0;
+    padding-bottom: 20px;
+  }
+
+  nav.nav-wrapper ul li a {
+    font-size: 18px;
+    line-height: 23px;
+  }
+
+  nav.nav-wrapper ul li a:hover {
+    border-color: transparent;
+  }
+
+  body.menu-is-active .menu {
+    -webkit-transform:  translate3d(0, 0, 0);
+            transform:  translate3d(0, 0, 0);\
+    display: block;
+    padding: 0 15px;
+  }
+
+  body.menu-is-active .main-overlay {
+    display: block;
+  }
+
+  body.menu-is-active .menu-trigger {
+    display: none;
+  }
+
+  .contact-container{
+    width: 100%;
+    font-size: 12px;
+    right: 0px;
+  }
+
+}
+
+@media only screen and (max-width: 560px) {
+
+
+
+  ul#scene li.name {
+    font-size: 22px;
+    line-height: 27px;
+  }
+
+  ul#scene li.title{
+    font-size: 20px;
+    line-height: 25px;
+    margin-top: 60px;
+  }
+
+  div.grid {
+    width: initial !important;
+  }
+
+  .btn {
+    margin-top: 80px;
+  }
+
+  .portfolio-btn,
+  .contact-btn {
+    display: block;
+    margin: 20px auto;
+    max-width: 120px;
+    font-size: 15px;
+    line-height: 20px;
+    padding: 10px 0;
+  }
+
+  h2.sub-title {
+    margin: 30px auto;
+    font-size: 23px;
+    line-height:28px;
+
+  }
+
+  section.beating-heart {
+    height: initial;
+  }
+
+  footer{
+    font-size: 100px;
+    line-height: 20px;
+    bottom: 40px;
+    text-align: center
+  }
+  .grid-item{
+    width: initial;
+  }
+  .tall-img{
+    height: initial;
+  }
+  .menu {
+    max-width: 200px;
+  }
+
+  .logo {
+    width: 320px;
+  }
+
+  .contact-container{
+    width: 100%;
+    font-size: 12px;
+  }
+
+}
